SEQNG-671 Use the jmx exporter on deploy