@@ -621,6 +621,7 @@ lazy val seqexecCommonSettings = Seq(
   // Specify a different name for the config file
   bashScriptConfigLocation := Some("${app_home}/../conf/launcher.args"),
   bashScriptExtraDefines += """addJava "-Dlogback.configurationFile=${app_home}/../conf/logback.xml"""",
+  bashScriptExtraDefines += """addJava "-javaagent:${app_home}/jmx_prometheus_javaagent-0.3.1.jar=6060:${app_home}/prometheus.yaml"""",
   // Copy logback.xml to let users customize it on site
   mappings in Universal += {
     val f = (resourceDirectory in (seqexec_web_server, Compile)).value / "logback.xml"
@@ -642,10 +643,7 @@ lazy val seqexecCommonSettings = Seq(
     // Support remote debugging
     "-J-Xdebug",
     "-J-Xnoagent",
-    "-J-verbose:gc",
     // These are very verbose but could be useful when tracking momeroy leaks
-    // "-J-XX:+PrintGCDetails",
-    // "-J-XX:+PrintGCTimeStamps",
     "-J-XX:+HeapDumpOnOutOfMemoryError",
     // Make sure the application exits on OOM
     "-J-XX:+ExitOnOutOfMemoryError",
@@ -687,7 +685,6 @@ lazy val app_seqexec_server = preventPublication(project.in(file("app/seqexec-se
   .settings(seqexecCommonSettings: _*)
   .settings(
     description := "Seqexec server for local testing",
-
     // Put the jar files in the lib dir
     mappings in Universal += {
       val jar = (packageBin in Compile).value
@@ -709,7 +706,10 @@ lazy val app_seqexec_server_gs_test = preventPublication(project.in(file("app/se
   .settings(deployedAppMappings: _*)
   .settings(embeddedJreSettingsLinux64: _*)
   .settings(
-    description := "Seqexec GS test deployment"
+    description := "Seqexec GS test deployment",
+    applicationConfName := "seqexec",
+    applicationConfSite := DeploymentSite.GS,
+    mappings in Universal ++= (mappings in (app_seqexec_server, Universal)).value
   ).dependsOn(seqexec_server)
 
 /**
@@ -726,7 +726,10 @@ lazy val app_seqexec_server_gn_test = preventPublication(project.in(file("app/se
   .settings(deployedAppMappings: _*)
   .settings(embeddedJreSettingsLinux64: _*)
   .settings(
-    description := "Seqexec GN test deployment"
+    description := "Seqexec GN test deployment",
+    applicationConfName := "seqexec",
+    applicationConfSite := DeploymentSite.GN,
+    mappings in Universal ++= (mappings in (app_seqexec_server, Universal)).value
   ).dependsOn(seqexec_server)
 
 /**
@@ -745,7 +748,8 @@ lazy val app_seqexec_server_gs = preventPublication(project.in(file("app/seqexec
   .settings(
     description := "Seqexec Gemini South server production",
     applicationConfName := "seqexec",
-    applicationConfSite := DeploymentSite.GS
+    applicationConfSite := DeploymentSite.GS,
+    mappings in Universal ++= (mappings in (app_seqexec_server, Universal)).value
   ).dependsOn(seqexec_server)
 
 /**
